--- a/css/common.css
+++ b/css/common.css
@@ -1,1 +1,128 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+ul{
+  list-style: none;
+}
+a{
+  text-decoration: none;
+}
+button{
+  border: 0;
+  cursor: pointer;
+}
 
+body{
+  padding-top: 60px;
+}
+.header{
+  height: 60px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  z-index: 99;
+  padding: 0 20px;
+  background: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.header .logo{
+  height: 36px;
+}
+.header .menu{
+  height: 36px;
+  display: flex;
+  align-items: center;
+}
+.header .menu li{
+  height: 100%;
+  margin: 0 30px;
+}
+.header .menu a{
+  display: block;
+  height: 100%;
+  border-bottom: 2px solid transparent;
+  font-size: 14px;
+  text-decoration: none;
+  color: #333;
+}
+.header .menu a:hover{
+  color: lightblue;
+}
+.header .menu .active a{
+  color: lightblue;
+  border-color: lightblue;
+}
+.header .sign-in{
+  width: 120px;
+  height: 34px;
+  line-height: 34px;
+  border-radius: 6px;
+  font-size: 12px;
+  color: #232323;
+  background: green;
+}
+
+.footer{
+  padding: 30px 60px;
+  background: #000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.footer-content{
+  display: flex;
+}
+.footer .footer-title{
+  font-size: 48px;
+  color: #248E34;
+  margin-bottom: 40px;
+}
+.footer .footer-menus{
+  max-width: 400px;
+  display: flex;
+  flex-direction: column;
+  margin-right: 100px;
+}
+.footer .footer-menus .item{
+  margin-bottom: 14px;
+  font-size: 16px;
+}
+.footer .footer-menus .item .label{
+  color: #248E34;
+  margin-bottom: 2px;
+}
+.footer .footer-menus .item .value{
+  color: #fff;
+}
+.footer .footer-menus .btn{
+  background: #555;
+  color: #248E34;
+  font-size: 32px;
+  text-align: center;
+  padding: 8px 20px;
+  cursor: pointer;
+  border-radius: 10px;
+  margin-top: 20px;
+}
+.footer-links{
+  display: flex;
+  flex-direction: column;
+  font-size: 18px;
+  
+}
+.footer-links a{
+  color: #fff;
+  display: flex;
+  align-items: center;
+  margin-bottom: 14px;
+
+}
+.footer-links a img{
+  width: 24px;
+  margin-right: 10px;
+}
